<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".main"
    android:id="@+id/a"
    android:background="#ffff1a87">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:id="@+id/tableRow"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:id="@+id/textView"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Edituser"
            android:hint="@string/userhint"
            android:layout_weight="1"
            style="@style/input"
            android:layout_gravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableRow"
        android:layout_marginTop="40dp"
        android:id="@+id/tableRow2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:id="@+id/textView2"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Editpass"
            android:hint="@string/passhint"
            android:layout_weight="1"
            android:selectAllOnFocus="false"
            style="@style/input"
            android:layout_gravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableRow2"
        android:layout_marginTop="44dp"
        android:id="@+id/tableRow3">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:id="@+id/remeber"
            android:textColor="#ffffffff"
            android:checked="false"
            android:layout_gravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableRow3"
        android:layout_marginTop="40dp"
        android:id="@+id/f">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signing"
            android:id="@+id/sigin"
            style="@style/button"
            android:shadowColor="#ffffffff"
            android:layout_gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:id="@+id/sigup"
            style="@style/button"
            android:layout_gravity="center" />
    </TableRow>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please Login Here"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/login" />
</RelativeLayout>